# scanner-app

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/scanner_app/: main.py
src/scanner_app/assets/icons/: __init__.py
src/scanner_app/scanner/: __init__.py  device_manager.py  scanner_manager.py
src/scanner_app/ui/: components.py  main_window.py
src/scanner_app/utils/: __init__.py  file_exporter.py  session_manager.py
